--- a/index.html
+++ b/index.html
@@ -1,74 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Habitat Inmobiliaria</title>
-  <script src="https://unpkg.com/@supabase/supabase-js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hábitat Inmobiliaria</title>
 </head>
 <body>
-  <h1>Habitat Inmobiliaria</h1>
+  <h1>Hábitat Inmobiliaria</h1>
+  <p>Tu propiedad ideal te está esperando.</p>
 
   <h2>Agregar Propiedad</h2>
-  <form id="formulario">
-    <label>Título: <input type="text" id="titulo" required></label><br>
-    <label>Descripción: <textarea id="descripcion" required></textarea></label><br>
-    <label>Precio: <input type="number" id="precio" required></label><br>
-    <label>Distrito: <input type="text" id="distrito" required></label><br>
-    <button type="submit">Agregar</button>
+  <form id="formulario-propiedad">
+    <input type="text" id="titulo" placeholder="Título" required />
+    <input type="text" id="descripcion" placeholder="Descripción" required />
+    <input type="number" id="precio" placeholder="Precio" required />
+    <input type="text" id="distrito" placeholder="Distrito" required />
+    <input type="text" id="tipo" placeholder="Tipo (casa, departamento...)" required />
+    <button type="submit">Guardar propiedad</button>
   </form>
 
-  <h2>Propiedades Registradas</h2>
-  <table border="1" id="tabla">
+  <h2>Propiedades registradas</h2>
+  <table border="1" id="tabla-propiedades">
     <thead>
       <tr>
         <th>Título</th>
         <th>Descripción</th>
         <th>Precio</th>
         <th>Distrito</th>
+        <th>Tipo</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
-  <script>
-    const SUPABASE_URL = "https://paktfgnzospbxnbvmyzc.supabase.co";
-    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBha3RmZ256b3NwYnhuYnZteXpjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM4OTc4MjYsImV4cCI6MjA2OTQ3MzgyNn0.GAxrht670Nc7IPd-3aikRa-eo5uTwVy1sbuqsbwUcQk";
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+  <script type="module">
+    import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
+
+    const supabaseUrl = 'https://paktfgnzospbxnbvmyzc.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBha3RmZ256b3NwYnhuYnZteXpjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM4OTc4MjYsImV4cCI6MjA2OTQ3MzgyNn0.GAxrht670Nc7IPd-3aikRa-eo5uTwVy1sbuqsbwUcQk';
+
+    const supabase = createClient(supabaseUrl, supabaseKey);
+
+    const form = document.getElementById('formulario-propiedad');
+    const tablaBody = document.querySelector('#tabla-propiedades tbody');
 
     async function cargarPropiedades() {
       const { data, error } = await supabase.from('propiedades').select('*');
-      const tbody = document.querySelector("#tabla tbody");
-      tbody.innerHTML = "";
-      data.forEach(prop => {
-        const fila = `<tr>
+      if (error) {
+        console.error('Error al cargar propiedades:', error);
+        return;
+      }
+
+      tablaBody.innerHTML = '';
+      data.forEach((prop) => {
+        const row = `<tr>
           <td>${prop.titulo}</td>
           <td>${prop.descripcion}</td>
           <td>${prop.precio}</td>
           <td>${prop.distrito}</td>
-        </tr>`;
-        tbody.innerHTML += fila;
-      });
-    }
-
-    document.getElementById("formulario").addEventListener("submit", async e => {
-      e.preventDefault();
-      const titulo = document.getElementById("titulo").value;
-      const descripcion = document.getElementById("descripcion").value;
-      const precio = parseFloat(document.getElementById("precio").value);
-      const distrito = document.getElementById("distrito").value;
-
-      const { error } = await supabase.from('propiedades').insert([{ titulo, descripcion, precio, distrito }]);
-      if (error) {
-        alert("Error al guardar");
-        console.error(error);
-      } else {
-        alert("Propiedad agregada");
-        cargarPropiedades();
-        document.getElementById("formulario").reset();
-      }
-    });
-
-    cargarPropiedades();
-  </script>
-</body>
-</html>
+          <td>${prop.tipo}</td>
