--- a/index.html
+++ b/index.html
@@ -4,58 +4,144 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hábitat Inmobiliaria</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"/>
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+      margin: 0;
+      background-color: #f8f8f8;
+      color: #333;
+    }
+    header {
+      background-color: #00695c;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+    }
+    .container {
+      max-width: 960px;
+      margin: auto;
+      padding: 2rem;
+    }
+    h2 {
+      color: #004d40;
+    }
+    form {
+      background-color: white;
+      padding: 1rem;
+      border-radius: 8px;
+      margin-bottom: 2rem;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    input, select, textarea, button {
+      width: 100%;
+      padding: 0.5rem;
+      margin: 0.5rem 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      background-color: #00695c;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #004d40;
+    }
+    .property-card {
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      padding: 1rem;
+      margin-bottom: 1rem;
+    }
+    .property-card h3 {
+      margin-top: 0;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hábitat Inmobiliaria</h1>
-  <p>Tu propiedad ideal te está esperando.</p>
+  <header>
+    <h1>Hábitat Inmobiliaria</h1>
+    <p>Tu propiedad ideal te está esperando</p>
+  </header>
 
-  <h2>Agregar Propiedad</h2>
-  <form id="formulario-propiedad">
-    <input type="text" id="titulo" placeholder="Título" required />
-    <input type="text" id="descripcion" placeholder="Descripción" required />
-    <input type="number" id="precio" placeholder="Precio" required />
-    <input type="text" id="distrito" placeholder="Distrito" required />
-    <input type="text" id="tipo" placeholder="Tipo (casa, departamento...)" required />
-    <button type="submit">Guardar propiedad</button>
-  </form>
+  <div class="container">
+    <h2>Registrar nueva propiedad</h2>
+    <form id="property-form">
+      <input type="text" id="titulo" placeholder="Título" required />
+      <textarea id="descripcion" placeholder="Descripción" required></textarea>
+      <input type="number" id="precio" placeholder="Precio (en soles)" required />
+      <select id="distrito" required>
+        <option value="">Selecciona distrito</option>
+        <option value="Miraflores">Miraflores</option>
+        <option value="San Isidro">San Isidro</option>
+        <option value="Surco">Surco</option>
+        <option value="La Molina">La Molina</option>
+        <option value="Barranco">Barranco</option>
+      </select>
+      <select id="tipo" required>
+        <option value="">Tipo de propiedad</option>
+        <option value="Departamento">Departamento</option>
+        <option value="Casa">Casa</option>
+        <option value="Terreno">Terreno</option>
+      </select>
+      <button type="submit">Guardar propiedad</button>
+    </form>
 
-  <h2>Propiedades registradas</h2>
-  <table border="1" id="tabla-propiedades">
-    <thead>
-      <tr>
-        <th>Título</th>
-        <th>Descripción</th>
-        <th>Precio</th>
-        <th>Distrito</th>
-        <th>Tipo</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+    <h2>Propiedades registradas</h2>
+    <div id="propiedades-lista"></div>
+  </div>
 
-  <script type="module">
-    import { createClient } from 'https://esm.sh/@supabase/supabase-js@2';
-
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script>
     const supabaseUrl = 'https://paktfgnzospbxnbvmyzc.supabase.co';
     const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBha3RmZ256b3NwYnhuYnZteXpjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM4OTc4MjYsImV4cCI6MjA2OTQ3MzgyNn0.GAxrht670Nc7IPd-3aikRa-eo5uTwVy1sbuqsbwUcQk';
-
-    const supabase = createClient(supabaseUrl, supabaseKey);
-
-    const form = document.getElementById('formulario-propiedad');
-    const tablaBody = document.querySelector('#tabla-propiedades tbody');
+    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
     async function cargarPropiedades() {
-      const { data, error } = await supabase.from('propiedades').select('*');
+      const { data, error } = await supabase.from('propiedades').select('*').order('id', { ascending: false });
       if (error) {
         console.error('Error al cargar propiedades:', error);
         return;
       }
 
-      tablaBody.innerHTML = '';
+      const contenedor = document.getElementById('propiedades-lista');
+      contenedor.innerHTML = '';
       data.forEach((prop) => {
-        const row = `<tr>
-          <td>${prop.titulo}</td>
-          <td>${prop.descripcion}</td>
-          <td>${prop.precio}</td>
-          <td>${prop.distrito}</td>
-          <td>${prop.tipo}</td>
+        const card = document.createElement('div');
+        card.className = 'property-card';
+        card.innerHTML = `
+          <h3>${prop.titulo}</h3>
+          <p><strong>Distrito:</strong> ${prop.distrito}</p>
+          <p><strong>Tipo:</strong> ${prop.tipo}</p>
+          <p><strong>Precio:</strong> S/ ${prop.precio}</p>
+          <p>${prop.descripcion}</p>
+        `;
+        contenedor.appendChild(card);
+      });
+    }
+
+    document.getElementById('property-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const nuevaPropiedad = {
+        titulo: document.getElementById('titulo').value,
+        descripcion: document.getElementById('descripcion').value,
+        precio: parseFloat(document.getElementById('precio').value),
+        distrito: document.getElementById('distrito').value,
+        tipo: document.getElementById('tipo').value,
+      };
+      const { error } = await supabase.from('propiedades').insert([nuevaPropiedad]);
+      if (error) {
+        alert('Error al guardar propiedad');
+      } else {
+        e.target.reset();
+        cargarPropiedades();
+      }
+    });
+
+    cargarPropiedades();
+  </script>
+</body>
+</html>
