--- a/index.html
+++ b/index.html
@@ -4,84 +4,82 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hábitat Inmobiliaria</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding: 2rem;
-      color: #333;
+      background-color: #f4f4f4;
+      font-family: 'Segoe UI', sans-serif;
     }
-    h1, h2 {
-      text-align: center;
-      color: #2c3e50;
+    .container {
+      margin-top: 40px;
     }
-    form {
-      max-width: 500px;
-      margin: 1rem auto;
-      background: #fff;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    input, button {
-      width: 100%;
-      padding: 10px;
-      margin: 5px 0;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background-color: #2980b9;
+    .table thead {
+      background-color: #0d6efd;
       color: white;
-      font-weight: bold;
-      cursor: pointer;
     }
-    button:hover {
-      background-color: #3498db;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 2rem;
-      background: #fff;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 0.75rem;
+    footer {
       text-align: center;
-    }
-    th {
-      background-color: #2980b9;
-      color: white;
+      margin-top: 50px;
+      padding: 20px;
+      background-color: #e9ecef;
     }
   </style>
 </head>
 <body>
-  <h1>Hábitat Inmobiliaria</h1>
-  <h2>Tu propiedad ideal te está esperando</h2>
+  <div class="container">
+    <h1 class="text-center mb-4">Hábitat Inmobiliaria</h1>
+    <p class="text-center">Tu propiedad ideal te está esperando.</p>
 
-  <form id="formulario">
-    <input type="text" id="titulo" placeholder="Título" required />
-    <input type="text" id="descripcion" placeholder="Descripción" required />
-    <input type="number" id="precio" placeholder="Precio" required />
-    <input type="text" id="distrito" placeholder="Distrito" required />
-    <input type="text" id="tipo" placeholder="Tipo (casa, depa, terreno)" required />
-    <button type="submit">Registrar Propiedad</button>
-  </form>
+    <form id="formulario" class="row g-3 mb-5">
+      <div class="col-md-6">
+        <label for="titulo" class="form-label">Título</label>
+        <input type="text" id="titulo" class="form-control" required>
+      </div>
+      <div class="col-md-6">
+        <label for="precio" class="form-label">Precio (S/)</label>
+        <input type="number" id="precio" class="form-control" required>
+      </div>
+      <div class="col-md-6">
+        <label for="distrito" class="form-label">Distrito</label>
+        <input type="text" id="distrito" class="form-control" required>
+      </div>
+      <div class="col-md-6">
+        <label for="tipo" class="form-label">Tipo de propiedad</label>
+        <select id="tipo" class="form-select" required>
+          <option value="Departamento">Departamento</option>
+          <option value="Casa">Casa</option>
+          <option value="Terreno">Terreno</option>
+        </select>
+      </div>
+      <div class="col-12">
+        <label for="descripcion" class="form-label">Descripción</label>
+        <textarea id="descripcion" class="form-control" rows="3" required></textarea>
+      </div>
+      <div class="col-12 text-end">
+        <button type="submit" class="btn btn-primary">Registrar propiedad</button>
+      </div>
+    </form>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Título</th>
-        <th>Descripción</th>
-        <th>Precio</th>
-        <th>Distrito</th>
-        <th>Tipo</th>
-      </tr>
-    </thead>
-    <tbody id="lista-propiedades"></tbody>
-  </table>
+    <h2 class="mb-3">Propiedades registradas</h2>
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <th>Título</th>
+          <th>Descripción</th>
+          <th>Precio</th>
+          <th>Distrito</th>
+          <th>Tipo</th>
+        </tr>
+      </thead>
+      <tbody id="lista-propiedades">
+        <tr><td colspan="5" class="text-center">Cargando propiedades...</td></tr>
+      </tbody>
+    </table>
+  </div>
+
+  <footer>
+    &copy; 2025 Hábitat Inmobiliaria - Todos los derechos reservados.
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
@@ -91,16 +89,26 @@
     );
 
     async function cargarPropiedades() {
-      const { data, error } = await supabase.from("propiedades").select("*").order("id", { ascending: false });
-      if (error) {
-        console.error("Error al cargar propiedades:", error);
-        return;
-      }
+      const { data, error } = await supabase
+        .from("propiedades")
+        .select("*")
+        .order("id", { ascending: false });
 
       const lista = document.getElementById("lista-propiedades");
       lista.innerHTML = "";
 
-      data.forEach((p) => {
+      if (error) {
+        console.error("Error al cargar propiedades:", error);
+        lista.innerHTML = `<tr><td colspan="5" class="text-danger">Error al cargar propiedades.</td></tr>`;
+        return;
+      }
+
+      if (data.length === 0) {
+        lista.innerHTML = `<tr><td colspan="5" class="text-center">No hay propiedades registradas.</td></tr>`;
+        return;
+      }
+
+      data.forEach(p => {
         const fila = document.createElement("tr");
         fila.innerHTML = `
           <td>${p.titulo}</td>
@@ -113,25 +121,22 @@
       });
     }
 
-    document.getElementById("formulario").addEventListener("submit", async (e) => {
+    document.getElementById("formulario").addEventListener("submit", async e => {
       e.preventDefault();
-      const titulo = document.getElementById("titulo").value.trim();
-      const descripcion = document.getElementById("descripcion").value.trim();
-      const precio = parseFloat(document.getElementById("precio").value);
-      const distrito = document.getElementById("distrito").value.trim();
-      const tipo = document.getElementById("tipo").value.trim();
-
-      const { error } = await supabase.from("propiedades").insert([
-        { titulo, descripcion, precio, distrito, tipo }
-      ]);
-
+      const nueva = {
+        titulo: document.getElementById("titulo").value.trim(),
+        descripcion: document.getElementById("descripcion").value.trim(),
+        precio: parseFloat(document.getElementById("precio").value),
+        distrito: document.getElementById("distrito").value.trim(),
+        tipo: document.getElementById("tipo").value.trim()
+      };
+      const { error } = await supabase.from("propiedades").insert([nueva]);
       if (error) {
         alert("Error al guardar: " + error.message);
-        return;
+      } else {
+        e.target.reset();
+        cargarPropiedades();
       }
-
-      e.target.reset();
-      cargarPropiedades();
     });
 
     cargarPropiedades();
