--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hábitat Inmobiliaria</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
+      background-color: #f5f5f5;
       padding: 2rem;
-      color: #333;
+      margin: 0;
     }
-    h1, h2 {
+    h1 {
       text-align: center;
       color: #2c3e50;
     }
     form {
       max-width: 500px;
-      margin: 1rem auto;
-      background: #fff;
+      margin: 0 auto 2rem auto;
+      background-color: #fff;
       padding: 1rem;
       border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
     input, button {
       width: 100%;
+      margin-bottom: 1rem;
       padding: 10px;
-      margin: 5px 0;
       border-radius: 5px;
       border: 1px solid #ccc;
     }
@@ -36,6 +35,7 @@
       background-color: #2980b9;
       color: white;
       font-weight: bold;
+      border: none;
       cursor: pointer;
     }
     button:hover {
@@ -44,11 +44,11 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 2rem;
       background: #fff;
+      margin-top: 2rem;
     }
     th, td {
-      border: 1px solid #ccc;
+      border: 1px solid #ddd;
       padding: 0.75rem;
       text-align: center;
     }
@@ -60,7 +60,6 @@
 </head>
 <body>
   <h1>Hábitat Inmobiliaria</h1>
-  <h2>Tu propiedad ideal te está esperando</h2>
 
   <form id="formulario">
     <input type="text" id="titulo" placeholder="Título" required />
@@ -84,8 +83,10 @@
     <tbody id="lista-propiedades"></tbody>
   </table>
 
-  <script>
-    const supabase = supabase.createClient(
+  <script type="module">
+    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
+
+    const supabase = createClient(
       "https://paktfgnzospbxnbvmyzc.supabase.co",
       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBha3RmZ256b3NwYnhuYnZteXpjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM4OTc4MjYsImV4cCI6MjA2OTQ3MzgyNn0.GAxrht670Nc7IPd-3aikRa-eo5uTwVy1sbuqsbwUcQk"
     );
