--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hábitat Inmobiliaria</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
+      background-color: #eef2f5;
       padding: 2rem;
-      margin: 0;
     }
     h1 {
       text-align: center;
@@ -51,10 +49,23 @@
       border: 1px solid #ddd;
       padding: 0.75rem;
       text-align: center;
+      vertical-align: top;
     }
     th {
       background-color: #2980b9;
       color: white;
+    }
+    .galeria {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 5px;
+      justify-content: center;
+    }
+    .galeria img {
+      width: 80px;
+      height: 60px;
+      object-fit: cover;
+      border-radius: 4px;
     }
   </style>
 </head>
@@ -67,12 +78,14 @@
     <input type="number" id="precio" placeholder="Precio en soles" required />
     <input type="text" id="distrito" placeholder="Distrito" required />
     <input type="text" id="tipo" placeholder="Tipo (casa, depa, terreno)" required />
+    <input type="file" id="imagenes" accept="image/*" multiple required />
     <button type="submit">Registrar Propiedad</button>
   </form>
 
   <table>
     <thead>
       <tr>
+        <th>Imágenes</th>
         <th>Título</th>
         <th>Descripción</th>
         <th>Precio</th>
@@ -106,8 +119,13 @@
       lista.innerHTML = "";
 
       data.forEach(p => {
+        const imagenesHtml = p.imagenes?.length
+          ? `<div class="galeria">${p.imagenes.map(url => `<img src="${url}" />`).join("")}</div>`
+          : "Sin imágenes";
+
         const fila = document.createElement("tr");
         fila.innerHTML = `
+          <td>${imagenesHtml}</td>
           <td>${p.titulo}</td>
           <td>${p.descripcion}</td>
           <td>S/ ${p.precio}</td>
@@ -126,15 +144,37 @@
       const precio = parseFloat(document.getElementById("precio").value);
       const distrito = document.getElementById("distrito").value.trim();
       const tipo = document.getElementById("tipo").value.trim();
+      const archivos = document.getElementById("imagenes").files;
 
-      if (isNaN(precio)) {
-        alert("El precio debe ser un número.");
+      if (!archivos.length) {
+        alert("Debes seleccionar al menos una imagen.");
         return;
       }
 
-      const { error } = await supabase
-        .from("propiedades")
-        .insert([{ titulo, descripcion, precio, distrito, tipo }]);
+      if (isNaN(precio)) {
+        alert("El precio debe ser numérico.");
+        return;
+      }
+
+      const urls = [];
+      for (let archivo of archivos) {
+        const nombreArchivo = `${Date.now()}_${archivo.name}`;
+        const { error: uploadError } = await supabase.storage
+          .from("imagenes")
+          .upload(nombreArchivo, archivo);
+
+        if (uploadError) {
+          alert("Error al subir imagen: " + uploadError.message);
+          return;
+        }
+
+        const url = `https://paktfgnzospbxnbvmyzc.supabase.co/storage/v1/object/public/imagenes/${nombreArchivo}`;
+        urls.push(url);
+      }
+
+      const { error } = await supabase.from("propiedades").insert([
+        { titulo, descripcion, precio, distrito, tipo, imagenes: urls }
+      ]);
 
       if (error) {
         alert("Error al guardar: " + error.message);
