--- a/index.html
+++ b/index.html
@@ -1,110 +1,209 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hábitat Inmobiliaria</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; background: #f2f2f2; padding: 20px; }
-    h1, h2 { color: #2c3e50; text-align: center; }
-    form, .resultados { background: #fff; padding: 15px; border-radius: 8px; margin-bottom: 20px; }
-    input, select, textarea, button { width: 100%; margin: 8px 0; padding: 8px; }
-    .tarjeta { border: 1px solid #ccc; padding: 10px; margin: 10px 0; border-radius: 6px; background: #fff; }
-    img { max-width: 100%; border-radius: 4px; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      margin: 0;
+      padding: 2rem;
+      color: #333;
+    }
+    h1, h2 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    form {
+      max-width: 600px;
+      margin: 1rem auto;
+      background: #fff;
+      padding: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    input, button, select {
+      width: 100%;
+      padding: 10px;
+      margin: 6px 0;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background-color: #2980b9;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #3498db;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 2rem;
+      background: #fff;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 0.75rem;
+      text-align: center;
+    }
+    th {
+      background-color: #2980b9;
+      color: white;
+    }
+    img {
+      max-width: 100px;
+    }
   </style>
 </head>
 <body>
   <h1>Hábitat Inmobiliaria</h1>
-  <h2>Registrar Propiedad</h2>
-  <form id="form-registro">
-    <input type="text" id="titulo" placeholder="Título" required />
-    <textarea id="descripcion" placeholder="Descripción" required></textarea>
-    <input type="number" id="precio" placeholder="Precio" required />
-    <input type="text" id="distrito" placeholder="Distrito" required />
-    <select id="tipo"><option value="Departamento">Departamento</option><option value="Casa">Casa</option><option value="Terreno">Terreno</option></select>
-    <input type="file" id="imagen" accept="image/*" />
-    <button type="submit">Guardar</button>
-  </form>
+  <h2>Tu propiedad ideal te está esperando</h2>
 
-  <h2>Buscar Propiedades</h2>
-  <form id="form-busqueda">
-    <input type="text" id="filtroDistrito" placeholder="Distrito (opcional)" />
-    <select id="filtroTipo"><option value="">-- Tipo --</option><option value="Departamento">Departamento</option><option value="Casa">Casa</option><option value="Terreno">Terreno</option></select>
-    <input type="number" id="precioMin" placeholder="Precio mínimo" />
-    <input type="number" id="precioMax" placeholder="Precio máximo" />
+  <!-- Formulario de búsqueda -->
+  <form id="formBusqueda">
+    <select id="buscarDistrito">
+      <option value="">Todos los Distritos</option>
+    </select>
+    <select id="buscarTipo">
+      <option value="">Todos los Tipos</option>
+      <option value="casa">Casa</option>
+      <option value="depa">Depa</option>
+      <option value="terreno">Terreno</option>
+    </select>
     <button type="submit">Buscar</button>
   </form>
 
-  <div class="resultados" id="resultados"></div>
+  <!-- Formulario de registro -->
+  <form id="formulario">
+    <input type="text" id="titulo" placeholder="Título" required />
+    <input type="text" id="descripcion" placeholder="Descripción" required />
+    <input type="number" id="precio" placeholder="Precio" required />
+    <input type="text" id="distrito" placeholder="Distrito" required />
+    <input type="text" id="tipo" placeholder="Tipo (casa, depa, terreno)" required />
+    <input type="file" id="imagen" accept="image/*" required />
+    <button type="submit">Registrar Propiedad</button>
+  </form>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script>
-  const supabase = supabase.createClient(
-    'https://paktfgnzospbxnbvmyzc.supabase.co',
-    'tu_anon_key'
-  );
+  <table>
+    <thead>
+      <tr>
+        <th>Imagen</th>
+        <th>Título</th>
+        <th>Descripción</th>
+        <th>Precio</th>
+        <th>Distrito</th>
+        <th>Tipo</th>
+      </tr>
+    </thead>
+    <tbody id="lista-propiedades"></tbody>
+  </table>
 
-  async function cargarPropiedades() {
-    const fd = document.getElementById('filtroDistrito').value;
-    const ft = document.getElementById('filtroTipo').value;
-    const pm = document.getElementById('precioMin').value;
-    const px = document.getElementById('precioMax').value;
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script>
+    const supabase = window.supabase.createClient(
+      'https://paktfgnzospbxnbvmyzc.supabase.co',
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBha3RmZ256b3NwYnhuYnZteXpjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM4OTc4MjYsImV4cCI6MjA2OTQ3MzgyNn0.GAxrht670Nc7IPd-3aikRa-eo5uTwVy1sbuqsbwUcQk'
+    );
 
-    let query = supabase.from('propiedades').select('*');
-    if (fd) query = query.ilike('distrito', `%${fd}%`);
-    if (ft) query = query.eq('tipo', ft);
-    if (pm) query = query.gte('precio', pm);
-    if (px) query = query.lte('precio', px);
+    async function cargarPropiedades(filtros = {}) {
+      let query = supabase.from("propiedades").select("*").order("id", { ascending: false });
 
-    const { data, error } = await query;
-    const res = document.getElementById('resultados');
-    res.innerHTML = '';
-    if (error) return res.innerHTML = `<p>Error: ${error.message}</p>`;
-    if (!data.length) return res.innerHTML = '<p>No se encontraron propiedades.</p>';
+      if (filtros.distrito) query = query.eq("distrito", filtros.distrito);
+      if (filtros.tipo) query = query.eq("tipo", filtros.tipo);
 
-    data.forEach(p => {
-      res.innerHTML += `
-        <div class="tarjeta">
-          <h3>${p.titulo}</h3>
-          <img src="${p.imagen || ''}" alt="" />
-          <p><strong>Precio:</strong> ${p.precio}</p>
-          <p><strong>Distrito:</strong> ${p.distrito}</p>
-          <p><strong>Tipo:</strong> ${p.tipo}</p>
-          <p>${p.descripcion}</p>
-        </div>`;
-    });
-  }
+      const { data, error } = await query;
 
-  document.getElementById('form-registro').addEventListener('submit', async e => {
-    e.preventDefault();
-    const t = document.getElementById('titulo').value;
-    const d = document.getElementById('descripcion').value;
-    const p = parseFloat(document.getElementById('precio').value);
-    const dis = document.getElementById('distrito').value;
-    const tipo = document.getElementById('tipo').value;
-    let imgUrl = '';
-    const file = document.getElementById('imagen').files[0];
-    if (file) {
-      const fn = `${Date.now()}-${file.name}`;
-      const { error: ue } = await supabase.storage.from('imagenes').upload(fn, file);
-      if (!ue) {
-        const { data: pu } = supabase.storage.from('imagenes').getPublicUrl(fn);
-        imgUrl = pu.publicUrl;
+      if (error) {
+        console.error("Error cargando propiedades:", error.message);
+        return;
       }
+
+      const lista = document.getElementById("lista-propiedades");
+      lista.innerHTML = "";
+
+      const distritosUnicos = new Set();
+
+      data.forEach(p => {
+        distritosUnicos.add(p.distrito);
+
+        const fila = document.createElement("tr");
+        fila.innerHTML = `
+          <td>${p.imagen_url ? `<img src="${p.imagen_url}" />` : ""}</td>
+          <td>${p.titulo}</td>
+          <td>${p.descripcion}</td>
+          <td>S/ ${p.precio}</td>
+          <td>${p.distrito}</td>
+          <td>${p.tipo}</td>
+        `;
+        lista.appendChild(fila);
+      });
+
+      // Llenar filtro distrito
+      const selectDistrito = document.getElementById("buscarDistrito");
+      selectDistrito.innerHTML = '<option value="">Todos los Distritos</option>';
+      distritosUnicos.forEach(d => {
+        const opt = document.createElement("option");
+        opt.value = d;
+        opt.textContent = d;
+        selectDistrito.appendChild(opt);
+      });
     }
-    const { error } = await supabase.from('propiedades').insert([{ titulo: t, descripcion: d, precio: p, distrito: dis, tipo, imagen: imgUrl }]);
-    if (error) return alert(error.message);
-    alert('Guardado ok');
-    e.target.reset();
-    cargarPropiedades();
-  });
 
-  document.getElementById('form-busqueda').addEventListener('submit', e => {
-    e.preventDefault();
-    cargarPropiedades();
-  });
+    document.getElementById("formulario").addEventListener("submit", async (e) => {
+      e.preventDefault();
 
-  cargarPropiedades();
-</script>
+      const titulo = document.getElementById("titulo").value.trim();
+      const descripcion = document.getElementById("descripcion").value.trim();
+      const precio = parseFloat(document.getElementById("precio").value);
+      const distrito = document.getElementById("distrito").value.trim();
+      const tipo = document.getElementById("tipo").value.trim();
+      const imagen = document.getElementById("imagen").files[0];
+
+      let imagen_url = null;
+
+      if (imagen) {
+        const { data: storageData, error: storageError } = await supabase.storage
+          .from("imagenes")
+          .upload(`propiedades/${Date.now()}_${imagen.name}`, imagen, {
+            cacheControl: '3600',
+            upsert: false
+          });
+
+        if (storageError) {
+          alert("Error al subir imagen: " + storageError.message);
+          return;
+        }
+
+        const { data: urlData } = supabase.storage.from("imagenes").getPublicUrl(storageData.path);
+        imagen_url = urlData.publicUrl;
+      }
+
+      const { error } = await supabase.from("propiedades").insert([
+        { titulo, descripcion, precio, distrito, tipo, imagen_url }
+      ]);
+
+      if (error) {
+        alert("Error al guardar: " + error.message);
+        return;
+      }
+
+      e.target.reset();
+      cargarPropiedades();
+    });
+
+    document.getElementById("formBusqueda").addEventListener("submit", (e) => {
+      e.preventDefault();
+      const distrito = document.getElementById("buscarDistrito").value;
+      const tipo = document.getElementById("buscarTipo").value;
+      cargarPropiedades({ distrito, tipo });
+    });
+
+    cargarPropiedades();
+  </script>
 </body>
 </html>
